@@ -137,6 +137,8 @@ Version 1.11.6+dev:
    * Some support for negative healing. This is not guaranteed to work correctly
      in all cases, but it does restore the basic functionality that was
      (probably accidentally) in 1.10.
+   * Overhaul of the game events engine. Among less noticeable details, this
+     grants feature request #18713.
  * Units:
    * Gave the Death Knight proper skeletal resistances, as well as submerge.
  * User interface:
